# home-server

./: .gitignore  .python-version  Makefile  README.md  Taskfile.yaml  ansible.cfg  inventory.yaml  pyproject.toml  requirements.yaml
files/: cluster-config.yaml.j2
playbooks/: kind.yaml  microk8s.yaml
roles/kind/defaults/: main.yml
roles/kind/files/: logind.conf
roles/kind/tasks/: fedora.yml  main.yml  precheck.yml  udev.yml
roles/kind/vars/: fedora.yml
tasks/: create-cluster.yml
vars/: project_vars.yaml
